dataworks-kubernetes-iac-local/helm-charts/pg.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app: postgres
    tier: production
    managed-by: manifest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
      tier: production
      managed-by: manifest
  serviceName: postgres
  template:
    metadata:
      labels:
        app: postgres
        tier: production
        managed-by: manifest
    spec:
      containers:
      - env:
        - name: POSTGRES_USER
          valueFrom:
            secretKeyRef:
              name: postgres-secret
              key: POSTGRES_USER
        - name: POSTGRES_HOST
          value: postgres
        - name: POSTGRES_DB
          value: dataworks
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              name: postgres-secret
              key: POSTGRES_PASSWORD
        - name: PGDATA
          value: /var/lib/postgresql/data/pgdata
        image: postgres:11.8-alpine
        args: ["-c", "max_connections=20000"]
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - exec pg_isready -U postgres
          failureThreshold: 6
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
          protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 512Mi
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - exec pg_isready -U postgres
          failureThreshold: 3
          initialDelaySeconds: 50
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          requests:
            memory: 256Mi
            cpu: 250m
          limits:
            cpu: 2000m
            memory: 2000Mi
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data-disk
      volumes:
      - azureDisk:
          cachingMode: ReadWrite
          diskName: postgres-data-disk
          diskURI: /subscriptions/6310f5e0-79d6-42a5-9e74-2628a74679aa/resourceGroups/MC_DWProductionUS_DWProdUS_centralus/providers/Microsoft.Compute/disks/postgres-data-disk
          fsType: ext4
          kind: Managed
          readOnly: false
        name: postgres-data-disk

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: postgres
    tier: production
    managed-by: manifest
  name: postgres
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres
    tier: production
    managed-by: manifest
  type: ClusterIP
