dataworks-kubernetes-iac-local/helm-charts/components-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '3600'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/contact: anish
    app.kubernetes.io/env: prod
    app.kubernetes.io/instance: dashboard-ui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dashboard-ui
    app.kubernetes.io/project: dataworks
    app.kubernetes.io/tier: frontend
    app.kubernetes.io/version: 0.1.0
    app.kubernetes.io/workload: dashboard-ui
  name: dashboard-ingress
spec:
  rules:
  - host: app2.thedataworks.com
    http:
      paths:
      - backend:
          service:
            name: jobfactory
            port:
              number: 80
        path: /api/jobfactory(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: outputfactory
            port:
              number: 80
        path: /api/outputfactory(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: config-data-management
            port:
              number: 80
        path: /api/crud(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: ws-service
            port:
              number: 80
        path: /api/websocket(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: indexingservice
            port:
              number: 80
        path: /api/indexing(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: script-service
            port:
              number: 80
        path: /api/script(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: notification-service
            port:
              number: 80
        path: /api/notification(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: reminder-service
            port:
              number: 80
        path: /api/reminder(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: slack-service
            port:
              number: 80
        path: /api/slack(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: testing-service
            port:
              number: 80
        path: /api/testingservice(/|$)(.*)
        pathType: ImplementationSpecific
      - backend:
          service:
            name: workerbot
            port:
              number: 80
        path: /api/workerbot(/|$)(.*)
        pathType: ImplementationSpecific
